fix: preventing the nav links to move when there is a scrollbar

--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -1,7 +1,8 @@
 nav {
   position: sticky;
+  width: 100vw;
   top: 0;
-  z-index: 100;
+  z-index: 99999;
   height: 60px;
   background-color: teal;
 
